fix design for manage reward on mobile screen and vault asset card

--- a/src/app/pages/vault/asset-card/vault-dialog/vault-dialog.component.scss
+++ b/src/app/pages/vault/asset-card/vault-dialog/vault-dialog.component.scss
@@ -1,4 +1,9 @@
 @import "../asset-card.component.scss";
+
+.modal-body {
+    padding: 0;
+}
+
 .btn-close {
     color: white;
 }
@@ -90,7 +95,7 @@
     padding: 15px;
     border-radius: 6px;
     background-color: $gray-950;
-    width: fit-content;
+    width: max-content;
 }
 
 .dropdown {
